--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
-
+    <link rel="sortcut icon" href="favicon.ico"/>;
     <title>Tree Huffman</title>
   </head>
   <body>
